사이드바 아이콘 수정 및 주석 추가

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,9 +5,9 @@
 
 @layer components {
   .sidebar-custom a {
-    @apply text-white !important;
+    @apply text-black !important;
   }
-
+  
   .main-content {
     @apply w-full max-w-5xl !important;
   }
