--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,9 @@
 /* Tailwind를 쓰더라도 추가 커스텀 스타일 */
 
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   /* margin: 0 auto; */
   /* padding: 2rem; */
-  /* text-align: center; */
 }
 
 .logo {
