--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f0f4fa;
 }
 
 body {
@@ -59,7 +59,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #f0f4fa;
+    background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
